--- a/Q7/Find_Pet.html
+++ b/Q7/Find_Pet.html
@@ -35,9 +35,9 @@
       <fieldset id="findPetFieldset">
           <legend>Info</legend>
           <label class="prompt">Dog or Cat?</label>
-          <input type="radio" id="dog" name="type" value="Dog">
+          <input type="radio" id="dog" name="type" value="Dog" required>
           <label class="nonPrompt" for="dog">Dog</label>
-          <input type="radio" id="cat" name="type" value="Cat">
+          <input type="radio" id="cat" name="type" value="Cat"required>
           <label class="nonPrompt" for="cat">Cat</label>
           <br><br>
 
